--- a/shape-calculator/src/App.css
+++ b/shape-calculator/src/App.css
@@ -1,4 +1,19 @@
 .App {
   text-align: center;
+  display: flex;
 }
 
+.shape-display-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  height: 100vh;
+}
+
+.shape-form-container{
+  display: flex;
+  justify-content: center;
+  width: 20%;
+  padding: 20px;
+}
