--- a/shape-calculator/src/App.css
+++ b/shape-calculator/src/App.css
@@ -1,19 +1,35 @@
 .App {
   text-align: center;
   display: flex;
+  color: black;
 }
 
 .shape-display-container{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 80%;
+  width: 70%;
   height: 100vh;
+  background-color: #f6f9fc;
 }
 
 .shape-form-container{
   display: flex;
-  justify-content: center;
-  width: 20%;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
   padding: 20px;
+  background-color: #e9f2fc;
+  border-right: 1px solid #b9c7d5;
+}
+
+.settings {
+  margin: 10px;
+  width: 100%;
+}
+label{
+  margin-right: 5px;
+  float:left;
+  width: 50px;
+  text-align: left;
 }
